clusters/talos-ottawa/apps/media/app/autobrr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: autobrr
spec:
  replicas: 0
  selector:
    matchLabels:
      app: autobrr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: autobrr
    spec:
      containers:
      - name: autobrr
        image: ghcr.io/autobrr/autobrr:latest
        ports:
        - name: http
          containerPort: 7474
          protocol: TCP
        volumeMounts:
        - name: config-volume
          mountPath: /config
      volumes:
      - name: config-volume
        persistentVolumeClaim:
          claimName: autobrr-config
