clusters/talos-ottawa/apps/media/app/autobrr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: autobrr
spec:
  selector:
    app: autobrr
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 7474
  type: ClusterIP
