clusters/talos-ottawa/apps/media/app/autobrr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: autobrr
  namespace: media
  annotations:
    item.homer.rajsingh.info/name: "autobrr"
    item.homer.rajsingh.info/subtitle: "Indexer Management"
    item.homer.rajsingh.info/logo: "https://raw.githubusercontent.com/homarr-labs/dashboard-icons/refs/heads/main/svg/autobrr.svg"
    item.homer.rajsingh.info/tag: "media"
    item.homer.rajsingh.info/keywords: "indexer, torrent, usenet"

    service.homer.rajsingh.info/name: "Media"
    service.homer.rajsingh.info/icon: "fas fa-tv"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: private
      namespace: home
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ts
      namespace: home
  hostnames:
    - "autobrr.${COMMON_DOMAIN}"
    - "autobrr.${CLUSTER_DOMAIN}"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: autobrr
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
